# gnils

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html
.claude/: settings.json
.github/workflows/: deploy.yml
gnils-client/: Cargo.toml  Trunk.toml
gnils-client/src/: components.rs  constants.rs  events.rs  main.rs  resources.rs  ship_blend.rs
gnils-client/src/systems/: collision.rs  input.rs  lobby.rs  missile.rs  mod.rs  network.rs  particles.rs  physics.rs  planet.rs  player.rs  rendering.rs  round.rs  setup.rs
gnils-protocol/: Cargo.toml
gnils-protocol/src/: lib.rs
gnils-server/: Cargo.toml
gnils-server/src/: main.rs
src/: components.rs  constants.rs  events.rs  main.rs  resources.rs  trail.rs
src/systems/: collision.rs  input.rs  lobby.rs  missile.rs  mod.rs  network.rs  particles.rs  physics.rs  planet.rs  player.rs  rendering.rs  round.rs  setup.rs
web/: index.html
